--- a/app/views/contents/show.html.slim
+++ b/app/views/contents/show.html.slim
@@ -2,6 +2,20 @@ p
   strong Title:
   = @content.title
 
+- @content.mediafiles.each do |mediafile|
+  - if mediafile.errors.any?
+    #error_explanation
+      h2 = "#{pluralize(mediafile.errors.count, "error")} prohibited this content from being saved:"
+      ul
+        - mediafile.errors.full_messages.each do |message|
+          li = message
+
+h2 Mediafiles
+= render @content.mediafiles
+
+h2 Add a mediafile:
+= render 'mediafiles/form'
+
 = link_to 'Edit', edit_content_path(@content)
 '|
 = link_to 'Back', contents_path
