--- a/app/views/volumes/_volume.html.slim
+++ b/app/views/volumes/_volume.html.slim
@@ -1,6 +1,10 @@
 - if volume.value.present?
-  tr
-    td = volume.name
-    td = volume.description
-    td = volume.value
-    td = link_to 'Destroy Volsofday', [volume.device, volume], method: :delete, data: { confirm: 'Are you sure?' }
+      tr
+        td = volume.name
+        td = volume.description
+        / td = volume.value
+        td
+          = form_for([volume.device, volume]) do |f|
+            = f.number_field :value, min: 0, max:100
+            = f.submit
+        td = link_to 'Destroy Volsofday', [volume.device, volume], method: :delete, data: { confirm: 'Are you sure?' }
