--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -6,7 +6,7 @@ table
       th ID
       th Device
       th Typeoftask
-      th Typeofstatus
+      th Status
       th Options
       th
       th
@@ -20,8 +20,8 @@ table
         td = task.id
         td = task.device.name
         td = task.typeoftask.name
-        td = task.typeofstatus.name
-        td = task.options
+        td class="img-status #{task.typeofstatus.name.downcase}"
+        td = task.options[0..30]+'...'
         td = (task.updated_at + 3600 * task.device.tzdate).to_s[0..18]
         td = (task.created_at + 3600 * task.device.tzdate).to_s[0..18]
         td = link_to 'Show', task
