--- a/app/views/contents/show.html.slim
+++ b/app/views/contents/show.html.slim
@@ -15,7 +15,7 @@ h2 Choice new files and upload:
 
 h2 Files
 - if @content.mediafiles.count > 0
-  table
+  table class="table table-striped"
     thead
       tr
         th Filename
