--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -1,5 +1,5 @@
 h1 Listing tasks
-
+= paginate @tasks
 table class="table table-striped"
   thead
     tr
@@ -27,7 +27,7 @@ table class="table table-striped"
         td = link_to 'Show', task
         td = link_to 'Edit', edit_task_path(task)
         td = link_to 'Destroy', task, data: {:confirm => 'Are you sure?'}, :method => :delete
-
+= paginate @tasks
 br
 
 = link_to 'New Task', new_task_path
