fix tasks index view

--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -5,7 +5,7 @@ table class="table table-striped"
     tr
       th ID
       th Device
-      th Typeoftask
+      th Type
       th Status
       th Options
       th
