added field filename in table mediafiles + fix index and show

--- a/app/views/contents/show.html.slim
+++ b/app/views/contents/show.html.slim
@@ -18,8 +18,10 @@ h2 Files
   table class="table table-striped"
     thead
       tr
-        th Filename
+        th ID
+        th Name
         th Md5
+        th File
         th [colspan="1"]
     tbody
       = render @content.mediafiles
