--- a/app/views/contents/show.html.slim
+++ b/app/views/contents/show.html.slim
@@ -15,13 +15,14 @@ h2 Choice new files and upload:
 
 h2 Files
 - if @content.mediafiles.count > 0
-  table class="table table-striped"
+  table class="table table-striped table-hover"
     thead
       tr
         th ID
         th Name
         th Md5
-        th File
+        / th File
+        th Play
         th [colspan="1"]
     tbody
       = render @content.mediafiles
