--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,3 +14,5 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "tasks";
+@import "worktime_broadcastings";
+@import "volsofdays.scss";
