added bgimage bgvideo

--- a/app/views/mediafiles/_mediafile.html.slim
+++ b/app/views/mediafiles/_mediafile.html.slim
@@ -14,4 +14,8 @@
         video width="50" controls=true
           source src="#{mediafile.file}" type="video/mp4"
           | Your browser does not support HTML5 video.
+
+      - if mediafile.filename.length > 4 && (mediafile.filename[-4..-1] == '.png' || mediafile.filename[-4..-1] == '.jpg')
+        = link_to image_tag(mediafile.file, :size => '25x25'), image_path(mediafile.file)
+
     td = link_to 'Destroy Mediafile', [mediafile.content, mediafile], method: :delete, data: { confirm: 'Are you sure?' }
