--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<div class="container">
+<div class="container-fluid">
   <% if current_user.present? %>
       <%= link_to 'Logout', destroy_user_session_path, method: :delete %>
   <% end %>
