--- a/app/views/orders/index.html.slim
+++ b/app/views/orders/index.html.slim
@@ -12,6 +12,9 @@ table class="table table-striped table-hover"
       th Crated_at
       th User
       th
+      /Edit th
+      th
+      th
       th
       th
 
@@ -25,10 +28,11 @@ table class="table table-striped table-hover"
         /Fixme after adde in order user_id
         td = current_user.email
         td = link_to 'Show', order
-        td = link_to 'Edit', edit_order_path(order)
+        /td = link_to 'Edit', edit_order_path(order)
         td = link_to 'Destroy', order, data: {:confirm => 'Are you sure?'}, :method => :delete
         - if order.status.name == 'New'
           td = link_to "Start", {:controller => "orders", :action => "start", :id => order.id}, :method => "post"
         td = link_to "Clone", {:controller => "orders", :action => "new", :old_id => order.id}, :method => "get"
-
+        - unless order.status.name == 'Cancel'
+          td = link_to "Cancel", {controller: "orders", action: "cancel", id: order}, :method => "post"
 = paginate @orders
