--- a/app/views/volsofdays/index.html.slim
+++ b/app/views/volsofdays/index.html.slim
@@ -1,6 +1,6 @@
 h1 Listing volsofdays
 
-table class="table table-striped"
+table class="table table-striped table-hover"
   thead
     tr
       th Name
