--- a/app/views/periods/index.html.slim
+++ b/app/views/periods/index.html.slim
@@ -1,6 +1,6 @@
 h1 Listing periods
 
-table class="table table-striped table-hover"
+table class="table table-striped table-hover table-condensed"
   thead
     tr
       th Value
