--- a/app/views/plsbgmusics/index.html.slim
+++ b/app/views/plsbgmusics/index.html.slim
@@ -1,6 +1,6 @@
 h1 Listing plsbgmusics
 = link_to 'New Plsbgmusic', new_plsbgmusic_path
-table class="table table-striped table-hover"
+table class="table table-striped"
   thead
     tr
       th ID
