--- a/app/views/typeoftasks/index.html.slim
+++ b/app/views/typeoftasks/index.html.slim
@@ -1,6 +1,6 @@
 h1 Listing typeoftasks
 
-table class="table table-striped table-hover"
+table class="table table-striped"
   thead
     tr
       th ID
