--- a/app/views/worktime_broadcastings/index.html.slim
+++ b/app/views/worktime_broadcastings/index.html.slim
@@ -1,6 +1,6 @@
 h1 Listing worktime_broadcastings
 
-table class="table table-striped table-hover"
+table class="table table-striped"
   thead
     tr
       th Market
@@ -13,7 +13,7 @@ table class="table table-striped table-hover"
 
   tbody
     - @worktime_broadcastings.each do |worktime_broadcasting|
-      tr class="success"
+      tr
         td = worktime_broadcasting.market
         td = worktime_broadcasting.wday
         td = worktime_broadcasting.start
