tables class... in all index's + added css someone orders's status image

--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -10,11 +10,19 @@
   background-image: url("wait.png");
 }
 
+.new {
+  background-image: url("wait.png");
+}
+
 .received {
   background-image: url("received.png");
 }
 
 .progress {
+  background-image: url("progress.png");
+}
+
+.play {
   background-image: url("progress.png");
 }
 
