--- a/app/views/contents/index.html.slim
+++ b/app/views/contents/index.html.slim
@@ -1,6 +1,6 @@
 h1 All categories of files
 
-table class="table table-striped"
+table class="table table-striped table-hover table-condensed"
   thead
     tr
       th Title
