--- a/app/views/devices/index.html.slim
+++ b/app/views/devices/index.html.slim
@@ -1,6 +1,6 @@
 h1 Listing devices
 
-table class="table table-striped table-hover"
+table class="table table-striped table-hover table-condensed"
   thead
     tr
       th Market
