--- a/app/views/markets/index.html.slim
+++ b/app/views/markets/index.html.slim
@@ -1,6 +1,6 @@
 h1 Listing markets
 
-table class="table table-striped table-hover" 
+table class="table table-striped table-hover table-condensed"
   thead
     tr
       th Name
