--- a/app/views/markets/show.html.slim
+++ b/app/views/markets/show.html.slim
@@ -20,7 +20,7 @@ h2 Create new time/value of volsofday
 
 h2 Volsofdays
 - if @market.volsofdays.count > 0
-  table class="table table-striped"
+  table class="table table-striped table-hover table-condensed"
     thead
       tr
         th Time
@@ -35,7 +35,7 @@ h2 Create work's time/wday of
 h2 Worktime_broadcastings
 - if @market.worktime_broadcastings.count > 0
   #work-time-show
-    table class="table table-striped"
+    table class="table table-striped table-hover table-condensed"
       thead
         tr
           th WDay
