--- a/app/views/orders/index.html.slim
+++ b/app/views/orders/index.html.slim
@@ -3,7 +3,7 @@ h1 Listing orders
 = link_to 'New Order', new_order_path
 br
 
-table class="table table-striped table-hover"
+table class="table table-striped table-hover table-condensed"
   thead
     tr
       th ID
@@ -23,7 +23,7 @@ table class="table table-striped table-hover"
       tr
         td = order.id
         td = order.name
-        td = order.status.name
+        td class="img-status #{order.status.name.downcase}"
         td = order.created_at.to_s[0..18]
         /Fixme after adde in order user_id
         td = current_user.email
