--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -1,6 +1,6 @@
 h1 Listing tasks
 = paginate @tasks
-table class="table table-striped table-hover"
+table class="table table-striped table-hover table-condensed"
   thead
     tr
       th ID
