--- a/app/views/typeofstatuses/index.html.slim
+++ b/app/views/typeofstatuses/index.html.slim
@@ -1,6 +1,6 @@
 h1 Listing typeofstatuses
 
-table class="table table-striped"
+table class="table table-striped table-hover table-condensed"
   thead
     tr
       th Name
