--- a/app/views/worktime_broadcastings/index.html.slim
+++ b/app/views/worktime_broadcastings/index.html.slim
@@ -1,6 +1,6 @@
 h1 Listing worktime_broadcastings
 
-table class="table table-striped"
+table class="table table-striped table-hover table-condensed"
   thead
     tr
       th Market
