login-form test

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,3 +16,4 @@
 @import "tasks";
 @import "worktime_broadcastings";
 @import "volsofdays.scss";
+.login-form { max-width: 380px; margin-top: 10px }
